Refactor code structure for improved readability and maintainability

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -98,6 +98,11 @@
     "experts": "خبرائنا"
   },
 
+  "projects": {
+    "Our Projects": "مشاريعنا",
+    "Description": "أحدث نجاحاتنا"
+  },
+
   "solutionPage": {
     "heading": "نبتكر الحلول... لنحقق التميز",
     "subheading": "نبتكر حلولًا ذكية تواكب تطلعاتك وتدفع أعمالك نحو التميز",
