fix more translations

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -20,21 +20,21 @@
 
   "homePage": {
     "hero_title": "حلول برمجية متكاملة",
-    "hero_subtitle": "لنجاح اعمالك",
-    "hero_desc_part1": "نقدم حلولاً مبتكرة تساعد الشركات على النمو والتطور في العصر الرقمي",
-    "hero_desc_part2": "مع احدث التقنيات وافضل الممارسات في التطوير",
+    "hero_subtitle": "لنجاح أعمالك",
+    "hero_desc_part1": "نقدم حلولًا مبتكرة تساعد الشركات على النمو والتطور في العصر الرقمي",
+    "hero_desc_part2": "مع أحدث التقنيات وأفضل الممارسات في التطوير",
     "request-quote-button": "اطلب عرض سعر",
     "discover our services": "استكشف خدماتنا",
   "aboutHomeHeading": "أكثر ما يميزنا",
     "aboutSectionTitle": "يمكننا تقديم خدمات مميزة للعملاء",
-    "aboutSectionDescription": "شركة تميز هي شركة تقنية رائدة في المملكة العربية السعودية والشرق الاوسط، تهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والافراد.",
+    "aboutSectionDescription": "شركة تميز هي شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، تهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والأفراد.",
     "itConsulting": "استشارات تكنولوجيا المعلومات",
     "appDevelopment": "تطوير التطبيقات",
-    "cyberSecurity": "الامن السيبراني",
+    "cyberSecurity": "الأمن السيبراني",
     "itManagement": "إدارة تكنولوجيا المعلومات",
     "uiUxDesign": "تصميم واجهة وتجربة المستخدم",
     "dataAnalysis": "تحليل البيانات",
-    "databaseSecurity": "امن قاعدة البيانات",
+    "databaseSecurity": "أمن قاعدة البيانات",
   "digitalMarketing": "التسويق الرقمي",
     "servicesDetailsButton": "تفاصيل خدماتنا",
     "projectsLabel": "مشروع",
@@ -43,9 +43,9 @@
     "aboutImageAlt": "عن شركة تميز",
   "MoreThanOneHundredBrands": "أكثر من 100 علامة تجارية تثق بنا",
     "what are we doing?": "ما نقوم به؟",
-    "what are we doing?_desc": "توفير حلول وتطوير اداء خدمة العملاء بانشاء مراكز اتصال مزودة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي",
+    "what are we doing?_desc": "توفير حلول وتطوير أداء خدمة العملاء بإنشاء مراكز اتصال مزودة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي",
   "follow our newest articles": "تابع أحدث مقالاتنا",
-  "keep in touch with us": "ابقَ على تواصل معنا",
+  "keep in touch with us": "ابق على تواصل معنا",
     "Testimonials": "التقييمات",
     "Some of our customer testimonials": "بعض تقييمات عملائنا"
   },
@@ -74,11 +74,11 @@
     "why-are-we-special": "لماذا نحن مميزون؟",
     "about-us-intro-paragraph": "نحن شركة سعودية متخصصة في مجال البرمجيات وتقديم الحلول الرقمية المبتكرة. فريقنا يضم نخبة من المصممين والمطورين المتخصصين في بناء تطبيقات ومواقع عالية الجودة تخدم مختلف القطاعات.",
     "request-quote-button": "اطلب عرض سعر",
-    "tech-enhancement-heading": "نحن نعزز نجاح اعمالنا باستخدام التكنولوجيا",
-    "our-goals-heading": "اهدافنا",
-    "our-goals-paragraph": "العمل على حل المشكلات نهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والافراد",
+    "tech-enhancement-heading": "نحن نعزز نجاح أعمالنا باستخدام التكنولوجيا",
+    "our-goals-heading": "أهدافنا",
+    "our-goals-paragraph": "العمل على حل المشكلات، نهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والأفراد",
     "our-vision-heading": "رؤيتنا",
-    "our-vision-paragraph": "العمل على حل المشكلات نهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والافراد",
+    "our-vision-paragraph": "العمل على حل المشكلات، نهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والأفراد",
     "about-us-image-alt": "فريقنا",
     "our-branches-heading": "فروعنا",
     "riyadh": "الرياض",
@@ -106,7 +106,7 @@
   "solutionPage": {
     "heading": "نبتكر الحلول... لنحقق التميز",
     "subheading": "نبتكر حلولًا ذكية تواكب تطلعاتك وتدفع أعمالك نحو التميز",
-    "solution_title": "نحن نقدم افضل الحلول",
+    "solution_title": "نحن نقدم أفضل الحلول",
     "solution details": "تفاصيل الحلول"
   },
 
@@ -115,27 +115,27 @@
   "servicesPage": {
     "heading": "خدمات تواكب طموحك، وتصنع الفارق",
     "subheading": "نقدم مجموعة متكاملة من الخدمات المصممة لتلائم احتياجاتك بدقة",
-    "ServicesSubTitle": "نحن نقدم افضل جوده",
+    "ServicesSubTitle": "نحن نقدم أفضل جودة",
     "serviceDetails": "تفاصيل الخدمة"
   },
 
-  "faq": "الاسئلة الشائعة",
+  "faq": "الأسئلة الشائعة",
   "faqPage": {
-    "headline1": "حافظ على امان عملك",
-    "headline2": "وتاكد من توافره بدرجة عالية"
+    "headline1": "حافظ على أمان عملك",
+    "headline2": "وتأكد من توافره بدرجة عالية"
   },
 
   "contact_us": "تواصل معنا",
   "email_placeholder": "البريد الإلكتروني",
-  "email_description": "يرجى إدخال عنوان بريدك الإلكتروني لتلقي آخر الاخبار والتحديثات.",
+  "email_description": "يرجى إدخال عنوان بريدك الإلكتروني لتلقي آخر الأخبار والتحديثات.",
   "quick_links": "روابط هامة",
-  "company_description": "شركة تميــّز هــي شركه تقنيــة رائــدة في الملكــة العربيــة الســعودية والــشرق الاوســط، تهـدف إلى تقديـم حلـول تقنيـة ذكيـة تلـبي احتياجـات الـشركات والمؤسسـات والافـراد",
-  "terms_condition": "الشروط والاحكام",
+  "company_description": "شركة تميّز هي شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، تهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والأفراد",
+  "terms_condition": "الشروط والأحكام",
   "privacy_policy": "سياسة الخصوصية",
   "form": {
     "name": "الاسم",
     "phone": "رقم الهاتف",
-    "email": "البريد الالكترونى",
+  "email": "البريد الإلكتروني",
     "message": "الرسالة",
     "message_placeholder": "اكتب رسالتك هنا"
   },
