refactor: Update translations and improve service link handling in components

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -43,7 +43,8 @@
     "aboutImageAlt": "عن شركة تميز",
     "MoreThanOneHundredBrands": "اكثر من 100 علامه تجاريه تثق بنا",
     "what are we doing?": "ما نقوم به؟",
-    "what are we doing?_desc": "توفير حلول وتطوير اداء خدمة العملاء بانشاء مراكز اتصال مزودة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي",
+    "what are we doing?_desc": "توفير حلول وتطوير أداء خدمة العملاء بإنشاء مراكز اتصال مزودة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي",
+    "Top Articles": "اهم المقالات",
     "follow our newest articles": "تابع احدث مقالاتنا",
     "keep in touch with us": "ابق على تواصل معنا",
     "Testimonials": "التقييمات",
