--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -44,6 +44,7 @@
     "MoreThanOneHundredBrands": "More than 100 brands trust us",
     "what are we doing?": "what are we doing?",
     "what are we doing?_desc": "Providing solutions and enhancing customer service performance by establishing contact centers equipped with global technologies and advanced cloud services for institutions and companies, along with a cloud communication system.",
+    "Top Articles": "Top Articles",
     "follow our newest articles": "Follow our newest articles",
     "keep in touch with us": "stay in touch with us",
     "Testimonials": "Testimonials",
