--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -107,7 +107,11 @@
     "heading": "We Create Solutions That Drive Excellence",
     "subheading": "Smart, forward-thinking solutions to drive your business toward excellence",
     "solution_title": "We Offer the Best Solutions",
-    "solution details": "Solution details"
+    "solution details": "Solution details",
+    "download_profile": "Download Profile",
+    "download_document": "Download Document",
+    "view_profile": "View Profile",
+    "view_document": "View Document"
   },
 
   "servicesPage": {
