Add LanguageDropdown component and related styles; implement loading and articles pages styles

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -7,6 +7,12 @@
   "about-us": "من نحن",
   "nav_lang": "English",
   "shopping now": "تسوق الآن",
+  "select language": "اختر اللغة",
+  "available languages": "اللغات المتاحة",
+  "opens in new tab": "يفتح في علامة تبويب جديدة",
+  "main navigation": "القائمة الرئيسية",
+  "toggle navigation": "فتح/إغلاق القائمة",
+  "company logo": "شعار شركة تميّز",
 
   "mobile_navbar": "القائمة الرئيسية",
   "mobile_solutions": "الحلول",
@@ -17,6 +23,11 @@
 
   "read more": "اطلع على المزيد",
   "No data founded": "لم نستطيع العثور على اى بيانات ",
+  "noData": {
+    "title": "لا توجد بيانات",
+    "message": "لم نتمكن من العثور على أي بيانات هنا. حاول مرة أخرى لاحقاً أو استكشف أقسام أخرى.",
+    "goHome": "العودة للرئيسية"
+  },
 
   "homePage": {
     "hero_title": "حلول برمجية متكاملة",
@@ -55,7 +66,11 @@
     "heading": "اكتشف المعرفة... وكن دائمًا في المقدمة",
     "subheading": "نشاركك المعرفة والخبرة لتبقى على اطلاع دائم بكل جديد",
     "Top Articles": "اهم المقالات",
-    "article details": "تفاصيل المقال"
+    "article details": "تفاصيل المقال",
+    "share": "شارك المقال",
+    "back_to_articles": "العودة للمقالات",
+    "related": "ذات صلة",
+    "related_articles": "مقالات ذات صلة"
   },
 
   "supportPage": {
@@ -63,8 +78,13 @@
     "subheading": "نحن هنا لمساعدتك في كل خطوة، بدعم سريع وفعّال على مدار الساعة",
     "talk with us": "تحدث معنا",
     "contact with us": "تواصل معنا",
+    "contact subtitle": "نحن دائمًا على استعداد لمساعدتك. تواصل معنا عبر أي من القنوات التالية",
+    "phone": "الهاتف",
+    "email": "البريد الإلكتروني",
+    "whatsapp": "واتساب",
     "how can we help": "كيف يمكننا مساعدتك؟",
-    "send": "إرسال"
+    "send": "إرسال",
+    "sending": "جاري الإرسال..."
   },
 
   "about tamuizz": "عن شركة تميز",
@@ -87,7 +107,52 @@
     "dammam": "الدمام",
     "dammam-address": "حي الاتصالات، شارع عثمان بن عفان، الدور الثالث",
     "cairo": "القاهرة",
-    "cairo-address": "3303 طريق العروبة، حي السليمانية 18480"
+    "cairo-address": "3303 طريق العروبة، حي السليمانية 18480",
+    "hero-title-1": "نبني",
+    "hero-title-highlight": "التميز الرقمي",
+    "hero-title-2": "معاً",
+    "hero-description": "نحن شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، نقدم حلولاً مبتكرة تدفع نجاح الأعمال والتحول الرقمي.",
+    "get-started": "ابدأ الآن",
+    "our-services": "خدماتنا",
+    "stats": {
+      "years": "سنوات من الخبرة",
+      "clients": "عملاء سعداء",
+      "projects": "مشاريع مكتملة",
+      "team": "أعضاء الفريق"
+    },
+    "our-story": "قصتنا",
+    "story-title": "رحلة من الابتكار والتميز",
+    "story-description": "منذ تأسيسنا، التزمنا بتقديم حلول تقنية متطورة تساعد الشركات على الازدهار في العصر الرقمي. يجمع فريقنا من الخبراء بين الإبداع والخبرة التقنية لإنشاء حلول تصنع الفارق.",
+    "highlight1": "موثوق به من قبل أكثر من 500 شركة في المنطقة",
+    "highlight2": "فريق دعم فني حائز على جوائز",
+    "highlight3": "حلول تقنية متطورة",
+    "highlight4": "ملتزمون بنجاح العملاء",
+    "what-drives-us": "ما يحركنا",
+    "values-section-title": "رسالتنا ورؤيتنا وقيمنا",
+    "values-section-desc": "نسترشد بالتزامنا بالتميز والابتكار وتقديم القيمة لعملائنا.",
+    "mission-title": "رسالتنا",
+    "mission-desc": "تمكين الشركات بحلول تقنية مبتكرة تدفع النمو والكفاءة والنجاح في العصر الرقمي.",
+    "vision-title": "رؤيتنا",
+    "vision-desc": "أن نكون الشريك التقني الرائد في الشرق الأوسط، المعروف بالتميز والابتكار وخدمة العملاء الاستثنائية.",
+    "values-title": "قيمنا",
+    "values-desc": "النزاهة والابتكار والتميز والتركيز على العميل توجه كل ما نفعله وكل حل نقدمه.",
+    "why-choose-us": "لماذا تختارنا",
+    "why-choose-title": "ما يميزنا",
+    "why-choose-desc": "نجمع بين الخبرة والتفاني والابتكار لتقديم حلول تتجاوز التوقعات.",
+    "why": {
+      "expertise-title": "خبرة في المجال",
+      "expertise-desc": "أكثر من 10 سنوات من الخبرة في تقديم مشاريع ناجحة عبر صناعات وقطاعات متنوعة.",
+      "support-title": "دعم على مدار الساعة",
+      "support-desc": "دعم فني على مدار الساعة لضمان تشغيل أنظمتك بسلاسة في جميع الأوقات.",
+      "quality-title": "ضمان الجودة",
+      "quality-desc": "اختبارات صارمة ومعايير جودة تضمن حلولاً موثوقة وعالية الأداء.",
+      "innovation-title": "التركيز على الابتكار",
+      "innovation-desc": "نبقى في طليعة اتجاهات التكنولوجيا لنقدم لك أحدث الحلول المتاحة."
+    },
+    "our-locations": "مواقعنا",
+    "branches-description": "مع مكاتب في جميع أنحاء المنطقة، نحن دائماً قريبون لخدمتك بشكل أفضل.",
+    "phone": "الهاتف",
+    "address": "العنوان"
   },
   "howWeWork": {
     "title": "كيف نعمل",
@@ -117,7 +182,20 @@
     "features": "الميزات",
     "popular": "الأكثر شعبية",
     "view_pricing": "عرض الأسعار والخطط",
-    "pricing_modal_title": "الخطط والأسعار"
+    "pricing_modal_title": "الخطط والأسعار",
+    "pricing_section": "قسم الأسعار",
+    "download_section": "إجراءات سريعة",
+    "compare_plans": "قارن الميزات والخطط",
+    "pdf_format": "صيغة PDF",
+    "full_details": "المعلومات الكاملة",
+    "feature_secure": "آمن وموثوق",
+    "feature_secure_desc": "أمان على مستوى المؤسسات مع ضمان تشغيل 99.9%",
+    "feature_fast": "أداء عالي",
+    "feature_fast_desc": "حلول محسّنة لأقصى سرعة وكفاءة",
+    "feature_support": "دعم على مدار الساعة",
+    "feature_support_desc": "مساعدة فنية متخصصة متاحة في أي وقت تحتاجها",
+    "feature_scalable": "قابل للتوسع",
+    "feature_scalable_desc": "ينمو مع احتياجات عملك بسلاسة"
   },
 
   "why are we special": "اكثر ما يميزنا",
@@ -126,7 +204,10 @@
     "heading": "خدمات تواكب طموحك، وتصنع الفارق",
     "subheading": "نقدم مجموعة متكاملة من الخدمات المصممة لتلائم احتياجاتك بدقة",
     "ServicesSubTitle": "نحن نقدم افضل جوده",
-    "serviceDetails": "تفاصيل الخدمة"
+    "serviceDetails": "تفاصيل الخدمة",
+    "explore-more": "استكشف المزيد",
+    "other-services": "خدمات أخرى قد تعجبك",
+    "view-all-services": "عرض جميع الخدمات"
   },
 
   "faq": "الاسئلة الشائعة",
